# pegasus

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/check/: action.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  codeql.yml  coverage.yml  dco.yml  dependency-review.yml  release.yml  sbom.yml  scorecard.yml
.reuse/: dep5
benchmarks/: manifest.toml
benchmarks/certifications/: iso-27001-compliant.toml  iso-27001-non-compliant.toml  uk-ce-compliant.toml  uk-ce-non-compliant.toml
benchmarks/tls/: expired_cert.toml  self_signed.toml  valid_chain.toml  weak_cipher.toml
certifications/: cabf-baseline-v2.toml  eu-ai-act-high-risk.toml  eu-cra.toml  iso-27001-2022.toml  iso-42001-a6.toml  mlcommons-ailuminate.toml  nist-ai-rmf.toml  nist-sp800-52r2.toml  owasp-asvs-v4.toml  owasp-llm-top10.toml  pci-dss-4.toml  slsa-v1.toml  soc2-type2-web.toml  uk-cyber-essentials.toml
crates/pegasus-bench/: Cargo.toml
crates/pegasus-bench/src/: lib.rs
crates/pegasus-certify/: Cargo.toml
crates/pegasus-certify/src/: lib.rs
crates/pegasus-policy/: Cargo.toml
crates/pegasus-policy/src/: engine.rs  lib.rs
crates/pegasus-review/: Cargo.toml
crates/pegasus-review/src/: diff.rs  lib.rs  review.rs
crates/pegasus-store/: Cargo.toml
crates/pegasus-store/src/: lib.rs  local.rs  traits.rs
crates/pegasus-types/: Cargo.toml
crates/pegasus-types/src/: envelope.rs  error.rs  lib.rs  types.rs
docs/: architecture.md  awesome-list-submissions.md  bestpractices-update.py  nist-airc-submission.md  oecd-ai-submission.md  uk-dsit-submission.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_certification_profile.rs  fuzz_envelope_deser.rs  fuzz_extract_package_path.rs
pegasus-schemas/: Cargo.toml
pegasus-schemas/src/: main.rs
policies/compliance/ai/: ai_disclosure_present.policy.yaml  ai_disclosure_present.rego  demographic_parity.policy.yaml  demographic_parity.rego  human_oversight_triggers.policy.yaml  human_oversight_triggers.rego  model_card_present.policy.yaml  model_card_present.rego  training_data_documented.policy.yaml  training_data_documented.rego
policies/compliance/dns/: caa_iodef_present.rego  caa_iodef_present_test.rego
policies/compliance/eu_ai_act/: README.md
policies/compliance/http/: permissions_policy_present.rego  permissions_policy_present_test.rego  referrer_policy_present.rego  referrer_policy_present_test.rego  security_txt_present.rego
policies/compliance/iso_42001/: README.md
policies/compliance/mcp/: README.md
policies/compliance/nist_ai_rmf/: README.md
policies/compliance/oidc/: issuer_uri_match.rego  issuer_uri_match_test.rego  strong_signing_required.rego  strong_signing_required_test.rego
policies/compliance/revocation/: ocsp_responder_available.rego
policies/compliance/semantic/: injection_category_coverage.rego  injection_category_coverage_test.rego  pii_protection.policy.yaml  pii_protection.rego  schema_exposure_isolation.rego  schema_exposure_isolation_test.rego
policies/compliance/supply_chain/: sbom_available.policy.yaml  sbom_available.rego
policies/compliance/tls/: cabf_baseline.rego  cabf_baseline_test.rego  certificate_lifetime_short.rego  certificate_lifetime_short_test.rego  extended_key_usage_server_auth.rego  extended_key_usage_server_auth_test.rego  hostname_validation.rego  hostname_validation_test.rego  maximum_chain_depth.rego  maximum_chain_depth_test.rego  san_hostname_match.rego  san_hostname_match_test.rego  wildcard_certificate_detection.rego  wildcard_certificate_detection_test.rego
policies/dns/: caa_records_present.policy.yaml  caa_records_present.rego
policies/http/: info_leakage.policy.yaml  info_leakage.rego  security_headers_present.policy.yaml  security_headers_present.rego
policies/oidc/: discovery_present.policy.yaml  discovery_present.rego  secure_token_config.policy.yaml  secure_token_config.rego
policies/security/ai/: adversarial_robustness.policy.yaml  adversarial_robustness.rego  harmful_content_resistance.policy.yaml  harmful_content_resistance.rego
policies/security/ct/: recent_issuance_monitoring.rego  unexpected_certificates.rego
policies/security/dns/: caa_issuewild_present.rego  caa_issuewild_present_test.rego
policies/security/http/: cors_origin_reflection.rego  cors_wildcard_origin.rego  csp_policy_strength.rego  csp_policy_strength_test.rego  hsts_preload_ready.rego  hsts_preload_ready_test.rego  rate_limiting_present.rego  robots_sensitive_paths.rego  x_frame_options_strength.rego  x_frame_options_strength_test.rego
policies/security/mcp/: README.md
policies/security/mitre_atlas/: README.md
policies/security/oidc/: implicit_flow_detection.rego  implicit_flow_detection_test.rego  jwks_uri_https.rego  jwks_uri_https_test.rego
policies/security/owasp_llm/: README.md
policies/security/semantic/: encoding_bypass_resistance.policy.yaml  encoding_bypass_resistance.rego  excessive_agency.policy.yaml  excessive_agency.rego  multi_technique_bypass.rego  multi_technique_bypass_test.rego  prompt_injection_resistance.policy.yaml  prompt_injection_resistance.rego  system_prompt_leakage.policy.yaml  system_prompt_leakage.rego
(+25 files in other folders)
