[workspace]
members = [
    "crates/pegasus-types",
    "crates/pegasus-policy",
    "crates/pegasus-store",
    "crates/pegasus-certify",
    "crates/pegasus-review",
    "crates/pegasus-bench",
    "pegasus-schemas",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/Guipetris/pegasus"
