[package]
name = "pegasus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
toml = "1.1"
pegasus-types = { path = "../crates/pegasus-types" }
pegasus-policy = { path = "../crates/pegasus-policy" }
pegasus-certify = { path = "../crates/pegasus-certify" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_envelope_deser"
path = "fuzz_targets/fuzz_envelope_deser.rs"
doc = false

[[bin]]
name = "fuzz_certification_profile"
path = "fuzz_targets/fuzz_certification_profile.rs"
doc = false

[[bin]]
name = "fuzz_extract_package_path"
path = "fuzz_targets/fuzz_extract_package_path.rs"
doc = false
