[package]
name = "pegasus-certify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Certification profiles and scoring engine for Pegasus"

[dependencies]
pegasus-types = { path = "../pegasus-types" }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
