[package]
name = "pegasus-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rego policy engine for the Pegasus compliance framework"

[dependencies]
pegasus-types = { path = "../pegasus-types" }
regorus = { version = "0.9", default-features = false, features = ["std", "time"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
