[package]
name = "pegasus-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Evidence store trait and local filesystem backend for Pegasus"

[dependencies]
pegasus-types = { path = "../pegasus-types" }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
