[package]
name = "pegasus-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, envelopes, and errors for the Pegasus compliance framework"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2", features = ["chrono", "url", "semver"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
